# starlette_pages

./: pyproject.toml
starlette_pages/: app.py  router.py
starlette_pages/pages/: about.py  dashboard.py
tests/: test_learn_starlette.py
