[tool.poetry]
name = "starlette_pages"
version = "0.1.0"
description = ""
authors = ["Ivan Ray Altomera <irayspacii@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
starlette = "^0.16.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
